cloudformation/aws-cf-nw-pub1priv1.yaml
# cf-nw-001-pub1priv1
AWSTemplateFormatVersion: "2010-09-09"
Description: >
    This template deploys a VPC, with a pair of public and private subnets spread 
    across three ( Zone A, Zone C )  Availabilty Zones. It deploys an Internet Gateway,
    with a default route on the public subnets. It deploy NAT Gateway (in 3 public AZ), 
    and default routes for them in the private subnets.
    
Parameters:

  InsertProjectName:
    Description: "Server Environment name."
    ConstraintDescription: "Choose an Environment from the drop down"
    Type: "String"
    Default: "ProjectName"
  InsertVpcCIDR:
    Description: "Please enter the IP range (CIDR notation) for this VPC"
    Type: "String"
    Default: "10.0.0.0/16"
  InsertPublicSubnet1CIDR:
    Description: "Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone"
    Type: "String"
    Default: "10.0.1.0/24"
  InsertPrivateSubnet1CIDR:
    Description: "Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone"
    Type: "String"
    Default: "10.0.2.0/24"
Resources:

####### Create custom VPC and send log to S3 bucket #######

  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: !Ref "InsertVpcCIDR"
      Tags:
      - Key: "Name"
        Value: !Sub "${InsertProjectName}-VPC"

####### Create Public Subnet #######
  PublicSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref "VPC"
      CidrBlock: !Ref "InsertPublicSubnet1CIDR"
      AvailabilityZone: !Select [ '0', !GetAZs ]
      MapPublicIpOnLaunch: "True"
      Tags:
      - Key: "Name"
        Value: !Sub "${InsertProjectName}-${InsertPublicSubnet1CIDR}-PublicSubnet1"


######## Create Private Subnet #######
  PrivateSubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref "VPC"
      CidrBlock: !Ref "InsertPrivateSubnet1CIDR"
      AvailabilityZone: !Select [ '2', !GetAZs ]
      Tags:
      - Key: "Name"
        Value: !Sub "${InsertProjectName}-${InsertPrivateSubnet1CIDR}-PrivateSubnet1"

######## Create Internet Gateway #######
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
      - Key: "Name"
        Value: !Sub "${InsertProjectName}-IGW"

######## Attach Internet Gateway to VPC #######
  GatewayToInternet:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref "VPC"
      InternetGatewayId: !Ref "InternetGateway"

######## Create Public Route Table #######
  PublicRouteTable1:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref "VPC"
      Tags:
      - Key: "Name"
        Value: !Sub "${InsertProjectName}-PublicRoute1"

######## Create Private Route Table #######
  PrivateRouteTable1:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref "VPC"
      Tags:
      - Key: "Name"
        Value: !Sub "${InsertProjectName}-PrivateRoute1"

######## Route-out Public Route Table to Internet Gateway (Internet connection)  #######
  PublicRouteIGW1:
    Type: "AWS::EC2::Route"
    DependsOn: "GatewayToInternet"
    Properties:
      RouteTableId: !Ref "PublicRouteTable1"
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref "InternetGateway"

######## Associate Public Route Table with Public Subnet1 & Subnet2 #######
  PublicSubnet1RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref "PublicSubnet1"
      RouteTableId: !Ref "PublicRouteTable1"

######## Associate Private Route Table with Private Subnet1 & Subnet2 #######
  PrivateSubnet1RouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref "PrivateSubnet1"
      RouteTableId: !Ref "PrivateRouteTable1"

######## Create Nat Gateway in Public Subnet #######
######## Allocate Elastic IP to Nat Gateway #######
######## Target Private Route Table with Nat Gateway #######

  NATGateway1EIP:
    Type: "AWS::EC2::EIP"
    DependsOn: "GatewayToInternet"
    Properties:
      Domain: "vpc"
  
  NATGateway1:
    Type: "AWS::EC2::NatGateway"
    DependsOn: "GatewayToInternet"
    Properties:
      AllocationId:
        Fn::GetAtt:
        - "NATGateway1EIP"
        - "AllocationId"  
      SubnetId: !Ref "PublicSubnet1"

  NatPrivateRoute1:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref "PrivateRouteTable1"
      DestinationCidrBlock: "0.0.0.0/0"
      NatGatewayId: !Ref "NATGateway1"

######## Create Custom Network ACL #######
  PublicNetworkACL:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref "VPC"
      Tags:
        - Key: "Name"
          Value: !Sub "${InsertProjectName}-PublicNetworkACL"

  PrivateNetworkACL:
    Type: "AWS::EC2::NetworkAcl"
    Properties:
      VpcId: !Ref "VPC"
      Tags:
        - Key: "Name"
          Value: !Sub "${InsertProjectName}-PrivateNetworkACL"

######## Associate Public Subnet to Network ACL #######
  PublicSubnet1NetworkAclAssociation:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref "PublicSubnet1"
      NetworkAclId: !Ref "PublicNetworkACL"
######## Associate Private Subnet to Network ACL #######
  PrivateSubnet1NetworkAclAssociation:
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    Properties:
      SubnetId: !Ref "PrivateSubnet1"
      NetworkAclId: !Ref "PrivateNetworkACL"
Outputs: 

  VPC: 
    Description: "A reference to the created VPC"
    Value: !Ref "VPC"
    Export:
      Name: !Sub "${InsertProjectName}-VPC"

  InsertVpcCIDR:
    Description: "A reference to the created VPC/CIDR"
    Value: !Ref "InsertVpcCIDR"
    Export:
      Name: !Sub "${InsertProjectName}-InsertVpcCIDR"

  PublicNetworkACL:
    Description: "A reference to the Public Network ACL"
    Value: !Ref "PublicNetworkACL"
    Export:
      Name: !Sub "${InsertProjectName}-PublicNetworkACL"

  PrivateNetworkACL: 
    Description: "A reference to the Private Network ACL"
    Value: !Ref "PrivateNetworkACL"
    Export:
      Name: !Sub "${InsertProjectName}-PrivateNetworkACL"

  PublicSubnets:
    Description: "A list of the public subnets"
    Value: !Join [ ",", [ !Ref "PublicSubnet1" ]]
    Export:
      Name: !Sub "${InsertProjectName}-PublicSubnets"

  PrivateSubnets:
    Description: "A list of the private subnets"
    Value: !Join [ ",", [ !Ref "PrivateSubnet1"]]
    Export:
      Name: !Sub "${InsertProjectName}-PrivateSubnets"

  PublicSubnet1:
    Description: "A reference to the public subnet in the 1st Availability Zone"
    Value: !Ref "PublicSubnet1"
    Export:
      Name: !Sub "${InsertProjectName}-PublicSubnet1"


  PrivateSubnet1:
    Description: "A reference to the private subnet in the 1st Availability Zone"
    Value: !Ref "PrivateSubnet1"
    Export:
      Name: !Sub "${InsertProjectName}-PrivateSubnet1"
